--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@ lilás: #5f2c82
     box-sizing: border-box;
 }
 
+body {
+    background-color: black;
+}
+
 body, html{
-    background-color: #5f2c82;
+    background-color: black;
     height: 100vh;
     width: 100vw;
 }
@@ -38,6 +42,9 @@ section#login{
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.501);
+
+    transition: width 0.3, height 0.3;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem {
