--- a/media-query.css
+++ b/media-query.css
@@ -35,13 +35,13 @@ body {
 }
 
 section#login > div#imagem {
-    float: left;
+    float: right;
     width: 50%;
     height: 100%;
 }
 
 section#login > div#formulario {
-    float: right;
+    float: left;
     width: 50%; /* Ajuste para telas maiores */
 }
 
@@ -50,4 +50,12 @@ section#login::after {
     content: "";
     display: block;
     clear: both;
+}
+
+div#formulario > h1 {
+    font-size: 2em;
+}
+
+div#formulario > p {
+    font-size: 1.2em;
 }
