--- a/media-query.css
+++ b/media-query.css
@@ -4,11 +4,17 @@
 @media screen and (min-width: 768px) and (max-width: 992px) {
     section#login {
         width: 80vw;
-    }
+    } /*Configuração para tablet*/
 }
 
 body {
     background-image: linear-gradient(to top, #49a09d, #5f2c82);
+}
+
+section#login {
+    width: 80vwh;
+    height: 400px;
+
 }
 
 section#login > div#imagem {
@@ -17,7 +23,7 @@ section#login > div#imagem {
     height: 100%;
 }
 
-section#login > div#formulario {
+section#login > div#formulario { /*Configurações para desktop*/
     float: right;
     width: 70%; /* Ajuste para caber ao lado do #imagem */
 }
@@ -32,6 +38,11 @@ body {
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
 }
     
+}
+
+section#login {
+    width: 950px;
+    height: 400px;
 }
 
 section#login > div#imagem {
@@ -58,4 +69,5 @@ div#formulario > h1 {
 
 div#formulario > p {
     font-size: 1.2em;
+    margin: 20px 0px;
 }
